@@ -6,6 +6,9 @@ Revision history for Perl extension {{$dist->name}}:
 
   - Add the ability to override the path of uptime.
 
+  [Other]
+  - Move Perl::Critic exceptions into t/etc/perlcriticrc.
+
 0.23      2020-03-29 13:09:50+01:00 Europe/London (TRIAL RELEASE)
   [Enhancements]
   - Support getloadavg for DragonFly BSD.
